# DAli

./: .gitignore  Cargo.toml  LICENSE  README.md
intelligence/: analysis.py  git_sense.py  senses.py  snippets.py
src/: bridge.rs  buffer.rs  config.rs  events.rs  fuzzy.rs  highlight.rs  main.rs  terminal.rs
src/editor/: help.rs  input.rs  mod.rs  navigation.rs  render.rs  state.rs  terminal_window.rs  text_ops.rs  types.rs  window.rs
