[package]
name = "dali"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.27"
pyo3 = { version = "0.23", features = ["auto-initialize"] }
libc = "0.2"
unicode-segmentation = "1.10"
rand = "0.8"
crossbeam-channel = "0.5"
portable-pty = "0.8"
arboard = "3.4"

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
