[package]
name = "dali"
version = "0.1.0"
edition = "2021"
description = "A terminal-based text editor built for performance and modern workflows."
authors = ["neo"]
license = "GPL-3.0"
repository = "https://github.com/arif39x/DAli"
keywords = ["editor", "terminal", "text-editor", "rust", "tui"]
categories = ["development-tools::editors"]

[dependencies]
crossterm = "0.27"
libc = "0.2"
unicode-segmentation = "1.10"
rand = "0.8"
crossbeam-channel = "0.5"
portable-pty = "0.8"
arboard = "3.4"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dirs = "5.0"

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
